css: Fix alignment of headers

--- a/site/css/default.css
+++ b/site/css/default.css
@@ -305,6 +305,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    text-align: start;
     font-weight: 500;
 }
 
